[gd_scene load_steps=13 format=3 uid="uid://djmdirnx2svhw"]

[ext_resource type="Script" uid="uid://ml3wvgo8ls00" path="res://sub/sub.gd" id="1_jrcp4"]
[ext_resource type="Texture2D" uid="uid://gy3ya5ojcnul" path="res://sub/claw.png" id="2_egpih"]
[ext_resource type="Texture2D" uid="uid://da6b5k1qrxgyp" path="res://sub/sub1.png" id="3_edyj4"]
[ext_resource type="Texture2D" uid="uid://clu652pcwt7wp" path="res://sub/sub2.png" id="4_8nxnj"]
[ext_resource type="Script" uid="uid://eoihi0qptjyp" path="res://sub/sub_visuals.gd" id="4_v8wm4"]
[ext_resource type="Script" uid="uid://c5uxnj06ygkxm" path="res://sub/sub_movement.gd" id="5_egpih"]
[ext_resource type="Script" uid="uid://d4id2tllwyatg" path="res://sub/sub_input.gd" id="6_edyj4"]
[ext_resource type="Script" uid="uid://biijowp4awwbt" path="res://sub/sub_rock_grabbing.gd" id="8_v8wm4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v8wm4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_edyj4")
}, {
"duration": 1.0,
"texture": ExtResource("4_8nxnj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v8wm4"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3ibi6"]
radius = 62.0081

[sub_resource type="CircleShape2D" id="CircleShape2D_edyj4"]
radius = 4.5

[node name="Sub" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
motion_mode = 1
script = ExtResource("1_jrcp4")

[node name="SubMovement" type="Node2D" parent="."]
script = ExtResource("5_egpih")

[node name="SubInput" type="Node2D" parent="."]
script = ExtResource("6_edyj4")

[node name="SubVisuals" type="Node2D" parent="."]
script = ExtResource("4_v8wm4")
claw_is_out = true

[node name="Claw" type="Sprite2D" parent="SubVisuals"]
position = Vector2(0, 3)
texture = ExtResource("2_egpih")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubVisuals"]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_v8wm4")
frame_progress = 0.994834

[node name="SubRockGrabbing" type="Node2D" parent="."]
script = ExtResource("8_v8wm4")

[node name="GrabRock" type="Area2D" parent="SubRockGrabbing"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubRockGrabbing/GrabRock"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_v8wm4")

[node name="CanGrabRock" type="Area2D" parent="SubRockGrabbing"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubRockGrabbing/CanGrabRock"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_3ibi6")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_edyj4")
debug_color = Color(0, 0.588235, 0.686275, 0)
